# Integral_technical_challenge

./: .env  README.md  db.py  db_test.py  pyproject.toml  query.py  requirements.txt  test.py
